# heartbeatpy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/heartbeatpy/: __init__.py  calculate_votes.py
tests/: test_find_votes.py
